new calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -643,15 +643,20 @@
             <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
 
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental(Impact) Carbon Footprint Calculator</a>
+            <a href="batchheting.html" class="calculator-btn">Energy requirement for a non-flow application </a>
 
 
             <a href="energyconsumtioncal.html" class="calculator-btn">Energy Consumption Calculator</a>
             <a href="exposurelevelcal.html" class="calculator-btn">Exposure Level (Concentration) Calculator</a>
             <a href="flashsteamcalculator.html" class="calculator-btn">Flash Steam Calculator</a>
+            <a href="heattransferthermoflow.html" class="calculator-btn">Heat-transfer-thermo flow caluculator</a>
+            <a href="heattransfersteam.html" class="calculator-btn">Heat Transfer Rate Calculator (Condensing Steam)</a>
+            <a href="heattransferthermoresistance.html" class="calculator-btn">Heat-transfer-thermo resistance calculator</a>
             <a href="logmeantemperaturedifference .html" class="calculator-btn">Log Mean Temperature Difference (LMTD) Calculator</a>
 
 
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration(MAC) Calculator</a>
+            <a href="condensingsteam.html" class="calculator-btn">Quantity of heat transferred by condensing steam Calcualtor</a>
 
              <a href="recyclingcarbonfootprintcalculator.html" class="calculator-btn">Recycling Carbon Footprint Savings Calculator </a>
              <a href="recyclingimpactcal.html" class="calculator-btn">Recycling Impact Calculator </a>
@@ -660,7 +665,11 @@
              <a href="specificvolumeofwetsteam.html" class="calculator-btn">Specific volume of wet steam</a>
 
              <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
-             <a href="carbonfootprintcal.html" class="calculator-btn">Travel Carbon Footprint Calculator</a>
+             <a href="carbonfootprintcal.html" class="calculator-btn" >Travel Carbon Footprint Calculator</a>
+             <a href="thermalconductavities.html" class="calculator-btn">Thermal transmittance (U) from the individual thicknesses and conductivities Calcualtor</a>
+             <a href="thermal.html" class="calculator-btn">Thermal transmittance (U) from the individual thermal resistances</a>
+             <a href="thermaltransmittance.html" class="calculator-btn">Thermal Transmittance (U-Value) From Thermal Resistance Calculator</a>
+             <a href="resistivityfromconductivity.html" class="calculator-btn">Thermal Resistivity From Conductivity Calculator</a>
 
              <a href="vaporpressurecalculator.html" class="calculator-btn">Vapor Pressure Calculator</a>
 
