--- a/nozzlequantityplacementcalculator.html
+++ b/nozzlequantityplacementcalculator.html
@@ -607,7 +607,7 @@ strong{
     <p>If you need assistance calculating the Net Hazard Volume, please use the following link:</p>
     <ul style="display: flex;">
         <li style="margin: 20px auto;">
-            <a href="nethazardcalculator.html" style="background-color: #1560bd; padding: 10px; color: white; border-radius: 10px;">FM-200 / NOVEC 1230 - Net Hazard Volume Calculator</a>
+            <a href="nethazardcalculator.html" style="background-color: #1560bd; padding: 10px; color: white; border-radius: 10px;">Net Hazard Volume Calculator</a>
         </li>
     </ul>
 </div>
