--- a/airflowrate.html
+++ b/airflowrate.html
@@ -548,7 +548,7 @@ strong{
 
 
 <div class="calculator-container">
-    <h2>Air Flow Rate Calculator</h2>
+    <h2>Air Flow Rate (Mass Flow) Calculator</h2>
     <div class="form-group">
         <label for="velocity">Velocity (m/s):</label>
         <input type="number" id="velocity" placeholder="Enter Velocity">
