--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -639,7 +639,7 @@
             <a href="ambientnoisecal.html" class="calculator-btn">Ambient Noise Level Calculator</a>
             <a href="arithmeticmeantemperaturedifferencecalculator.html" class="calculator-btn">Arithmetic Mean Temperature Difference (AMTD) Calculator</a>
 
-            <a href="airflowrate.html" class="calculator-btn">Air Flow Rate Calculator</a>
+            <a href="airflowrate.html" class="calculator-btn">Air Flow Rate (Mass Flow) Calculator</a>
             <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
 
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental(Impact) Carbon Footprint Calculator</a>
