--- a/envcarbonfootprintcal.html
+++ b/envcarbonfootprintcal.html
@@ -252,7 +252,7 @@
 }
 
 .note-container h3 {
-    margin-top: 0;
+    margin:15px 0;
     color: #007bff;
     font-size: 18px;
 }
@@ -574,6 +574,13 @@ strong{
     <p> 
         The <strong>Carbon Footprint</strong> is a measure of the total greenhouse gas emissions caused directly or indirectly by an individual, organization, event, or product. It is typically expressed in kilograms of carbon dioxide equivalent (kg CO₂). This calculator helps you estimate your carbon footprint based on your energy consumption and waste generation. 
     </p> 
+    <h3>Parameters Used:</h3>
+    <ul>
+        <li><strong>Energy Consumption (kWh):</strong> The amount of electricity used.</li>
+        <li><strong>Emission Factor for Energy (kg CO₂/kWh):</strong> The carbon emissions per unit of electricity consumed.</li>
+        <li><strong>Waste Generation (kg):</strong> The total waste produced.</li>
+        <li><strong>Emission Factor for Waste (kg CO₂/kg waste):</strong> The carbon emissions per unit of waste generated.</li>
+    </ul>
     <p> 
         Understanding your carbon footprint is crucial for identifying areas where you can reduce your environmental impact. By making informed decisions about energy use, waste management, and other activities, you can contribute to a more sustainable future. 
     </p> 
