new calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -643,6 +643,8 @@
             <a href="airflowratetimebasedcal.html" class="calculator-btn">Air Flow Rate (Time-Based) Calculator</a>
 
             <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
+            <a href="carbonfootprintefficiency.html" class="calculator-btn">Carbon Footprint Efficiency Calculator</a>
+
 
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental(Impact) Carbon Footprint Calculator</a>
             <a href="batchheting.html" class="calculator-btn">Energy requirement for a non-flow application </a>
@@ -660,6 +662,7 @@
 
             <a href="Mean Steam Consumption Rate (ṁₛ) for a flow-type application.html" class="calculator-btn">Mean Steam Consumption Rate for a Flow-Type Application Caluculator (1)</a>
             <a href="meansteamconsumption.html" class="calculator-btn">Mean Steam Consumption Of A Flow Type Application Calculator (2)</a>
+            <a href="meanstreamflowratetoastoragecalorifier.html" class="calculator-btn">Mean Steam Flowrate To A Storage Calorifier Calculator</a>
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration(MAC) Calculator</a>
             <a href="condensingsteam.html" class="calculator-btn">Quantity of heat transferred by condensing steam Calcualtor</a>
 
@@ -668,6 +671,9 @@
              <a href="rankineefficiencycalculator.html" class="calculator-btn">Rankine Efficiency Calculator </a>
 
              <a href="specificvolumeofwetsteam.html" class="calculator-btn">Specific volume of wet steam</a>
+             <a href="steamcondensingrateforhorizontalpipesinstillair.html" class="calculator-btn">Steam Condensing Rate For Horizontal Pipes In Still Air Calculator</a>
+             <a href="steamcondensingrate.html" class="calculator-btn">Steam Condensing Rate for Air Heating Equipment caluculator</a>
+             <a href="steamrunningloadtokeepasteammaintain.html" class="calculator-btn">Steam Running Load to keep a steam maintain Calculator</a>
 
              <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
              <a href="carbonfootprintcal.html" class="calculator-btn" >Travel Carbon Footprint Calculator</a>
