--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -641,7 +641,9 @@
         
 
         <div class="button-container" id="calculatorList">
-            <!-- <a href="accidentrate.html" class="calculator-btn">Accident Rate Calculator</a> -->
+            <a href="accidentrate.html" class="calculator-btn">Accident Rate Calculator</a>
+            <a href="averageresolutiontimecalculator.html" class="calculator-btn">Average Resolution Time (ART) Calculator</a>
+
 
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
@@ -670,9 +672,13 @@
             <a href="fallcal.html" class="calculator-btn">Fall Clearance Calculator</a>
             <a href="incidentratecal.html" class="calculator-btn">Incidence Rate Calculator</a>
             <a href="incidentfrequentrate.html" class="calculator-btn">Incident Frequency Rate (IFR) Calculator</a>
+            <a href="Incidentsnearmissescalculator.html" class="calculator-btn">Incidents & Near Misses Calculator</a>
+
 
             <a href="ipchecker.html" class="calculator-btn">IP Rating Checker</a>
             <a href="kicktolerancecalculator.html" class="calculator-btn">Kick Tolerance Calculator</a>
+            <a href="thekineticenergyinsteam.html" class="calculator-btn"> Kinetic Energy In Steam</a>
+
 
            
             <a href="laddercal.html" class="calculator-btn">Ladder Length Calculator</a>
@@ -703,6 +709,8 @@
             <a href="safetyfactor.html" class="calculator-btn">Safety Factor Calculator</a>
             <a href="steamconsumptiontoprovidetankheatlosses.html" class="calculator-btn">Steam Consumption To Provide Tank Heat Losses Calculator</a>
             <a href="steamconsumptionbyinjection.html"  class="calculator-btn">Steam Consumption by Injection into a Tank caluculator</a>
+            <a href="steamstart-uploadtobringsteampipework.html" class="calculator-btn">Steam Start-Up Load to bring steam pipework Calculator</a>
+            <a href="stressinaboilershellresultingfromboilerpressure.html" class="calculator-btn">Stress In A Boiler Shell Resulting From Boiler Pressure Calculator</a>
 
             <a href="traininghourcal.html" class="calculator-btn">Training Hour Calculation</a>
             <a href="deadloadcal.html" class="calculator-btn">Total Dead Load Calculation (DL)</a>
@@ -711,8 +719,11 @@
             <a href="totalfalldistanceofobject.html" class="calculator-btn">Total Fall Distance Calculator</a>
             <a href="tensionperlegcalcualtor.html" class="calculator-btn">Tension Per Leg Calculator</a>
             <a href="trifr.html" class="calculator-btn">Total Recordable Incident Frequency Rate (TRIFR) Calculator</a>
-            <a href="requiredsteamflowratefromakw.html" class="calculator-btn">To Determine The Required Steam Flowrate From A kW Rating Calculator</a>
+            <a href="totallosshourscalculator.html" class="calculator-btn">Total Loss Hours Calculator</a>
 
+            <a href="requiredsteamflowratefromakw.html" class="calculator-btn">To Determine The Required Steam Flowrate From A kW Rating Calculator</a>
+            <a href="velocity of steam passingthroughanorifice.html" class="calculator-btn">Velocity of Steam Passing Through an Orifice Calculator (1)</a>
+            <a href="velocityofsteampassingthroughoriface2.html" class="calculator-btn">Velocity of Steam Passing Through an Orifice Calculator (2)</a>
             <a href="wireropecal.html" class="calculator-btn">Wire Rope Grips Calculator</a>
         </div>
     </section>
