new calcualtors added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -682,6 +682,7 @@
              <a href="thermaltransmittance.html" class="calculator-btn">Thermal Transmittance (U-Value) From Thermal Resistance Calculator</a>
              <a href="steamflowrateforasteaminjection.html" class="calculator-btn">To Determine The Steam Flowrate For A Steam Injection Process Calculator</a>
              <a href="resistivityfromconductivity.html" class="calculator-btn">Thermal Resistivity From Conductivity Calculator</a>
+             <a href="totaldissolvedsolids.html" class="calculator-btn">TDS Calculator (Density Method) Calculator</a>
 
              <a href="vaporpressurecalculator.html" class="calculator-btn">Vapor Pressure Calculator</a>
 
