--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -638,6 +638,8 @@
         </div>
         <div class="button-container" id="calculatorList">
                         <a href="burnratecal.html" class="calculator-btn">Burn rate(Chemical exposure) Calculator</a>
+                        <a href="basedesignquantityforco₂calculator.html" class="calculator-btn">Base Design Quantity for CO₂ Calculator</a>
+
 
 
             <a href="fireloadercal.html" class="calculator-btn">Fire Load Calculator</a>
@@ -648,18 +650,26 @@
                 <a href="agentquantitycalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Agent Quantity Calculator</a>
                 <a href="nozzlequantityplacementcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Nozzle Quantity Calculator</a>
                 <a href="pipesizingcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Pipe Sizing Calculator</a>
+                <a href="finaldesignquantityforco2calculator.html" class="calculator-btn">Final Design Quantity for CO₂ Calculator</a>
+
 
 
 
 
                 <a href="heattransferconductionfourier.html" class="calculator-btn">Heat Transfer By Conduction Calculator (Fourier's Law) </a>
-                <a href="heattransferconvectioncalculator .html" class="calculator-btn">Heat Transfer By Convection Calculator </a>
+                <a href="heattransferconvectioncalculator .html" class="calculator-btn">Heat Transfer By Convection (Newton's Law ) Calculator </a>
 
 
                 <a href="heatdetectorresponsetimecalculator.html" class="calculator-btn">Heat Detector Response Time Calculator</a>
+                <a href="modifiedquantitycalculator.html" class="calculator-btn">Modified CO₂ Quantity Calculator</a>
+
+                <a href="reachedconcentrationcalculator.html" class="calculator-btn">Reached Concentration Calculator</a>
+
 
                 <a href="smokedetectorspacingcalculator.html" class="calculator-btn">Smoke Detector Spacing Calculator</a>
                 <a href="smokedetectorquantitycalculator.html" class="calculator-btn">Smoke Detector Quantity Calculator</a>
+                <a href="specificvolumecalculation.html" class="calculator-btn">Specific Volume Calculation</a>
+
 
 
 
