--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -635,7 +635,13 @@
             <input type="text" id="searchBar" class="form-control custom-search" placeholder="🔍 Search Calculator..." onkeyup="filterCalculators()">
         </div>
         <div class="button-container" id="calculatorList">
+            <a href="MassFlowRateofSteamThroughanOrifice.html" class="calculator-btn">Mass Flow Rate of Steam Through an Orifice calculator</a>
+            <a href="relatingboilerpressuretoheattransferrate.html" class="calculator-btn">Relating Boiler Pressure To Heat Transfer Rate Calculator</a>
+
             <a href="steamconsumptionofdryingcylinders.html" class="calculator-btn">Steam Consumption of Drying Cylinders Calculator</a>
+            <a href="Velocity of Steam Passing ThroughanOrificequality.html" class="calculator-btn">Steam Velocity Calculator through an orifice Calculator</a>
+            <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">To Determine The Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
+            <a href="actualevaporationrateofaboilerfromitskWrating.html" class="calculator-btn">To Determine The Actual Evaporation Rate Of A Boiler From Its kW Rating And The Energy Required To Be Added To The Feedwater To Make Steam Calculator</a>
 
          
         </div>        
